[emotiva] Fix keep alive when adding devices manually (#18469)
* [emotiva] Fix issue with keep alive when adding devices manually.
* Improves handling of keep alive.
* Bumps default protocol version 3.0.
* Add documentation about opening of ports, protocol versions and keep alive.

Signed-off-by: Espen Fossen <espenaf@junta.no>